# azenv-deploy

./: .gitignore  README.md  pyproject.toml
.github/scripts/: test.sh  tests.sh
.github/workflows/: ci.yml
.pulumi/stacks/dev/: dev.json  dev.json.attrs  dev.json.bak  dev.json.bak.attrs
azenv_deploy/azenv_deploy/: azureml.py  constants.py  private_endpoint.py  storage.py
docs/: README.md
projects/dev/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  config.py  init_pypath.py
scripts/: setup_env.sh
tests/azenv_deploy/: test_private_endpoint.py
tests/azenv_deploy/config/: test_config.py  test_util_path.py
