[tool.poetry]
name = "azenv-deploy"
version = "0.1.0"
description = ""
authors = ["angiexiong <angie.xiong0627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.152.0"
pulumi-azure-native = "^2.88.0"
pydantic = "^2.10.6"
pulumi-azuread = "^6.4.0"
pulumi-random = "^4.18.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
pytest = "^8.3.5"
coverage = "^7.7.0"
pyright = "^1.1.397"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
